@@ -1,4 +1,9 @@
-2005-07-29  Mark McLoughlin  <mark@skynet.ie>
+2005-08-01  Mark McLoughlin  <markmc@redhat.com>
+
+	* lib/storage.py: fix another instance of
+	a translator-unfriendly	string. Bug #308363
+
+2005-07-29  Mark McLoughlin  <markmc@redhat.com>
 
 	* sabayon.spec.in: on FC5, require pygtk-2.7.1 for
 	the MessageDialog constructor fix in bug #311226.
